--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,12 +17,15 @@
     "@types/react-dom": "^17.0.0",
     "axios": "^0.24.0",
     "chakra-react-select": "^1.3.4",
+    "formik": "^2.2.9",
     "framer-motion": "^4",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.5.2",
+    "validator": "^13.7.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -48,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/validator": "^13.7.0"
   }
 }
